# p1-CG

./: .gitignore  README.md
apps/cgdemo/reader/: ReaderBase.cpp
apps/cgvisdemo/: CMakeLists.txt
apps/p1/: Main.cpp
apps/p1/include/: Actor.h  Box.h  Intersection.h  MainWindow.h  MyGraphics3.h  MyRenderer.h  Plane.h  Raycaster.h  Scene.h  Shape3.h  Sphere.h
apps/p1/src/: MainWindow.cpp  MyRenderer.cpp  Raycaster.cpp  fragmentShader.frag  vertexShader.vert
apps/template/: Main.cpp  imgui.ini
cg/: CMakeLists.txt
cg/include/core/: Array.h  BlockAllocator.h  Flags.h  List.h  ListBase.h  SoA.h
cg/include/geometry/: BVH.h  Bounds2.h  Bounds3.h  Index2.h  Index3.h  TriangleMeshBVH.h
cg/include/graph/: SceneNode.h  SceneWindow.h
cg/include/graphics/: Color.h  GLWindow.h  SceneWindowBase.h  TransformableObject.h
cg/include/math/: Real.h
cg/src/geometry/: BVH.cpp  TriangleMeshBVH.cpp
cg/src/graph/: SceneWindow.cpp
cg/src/graphics/: GLProgram.cpp  GLWindow.cpp
cgcuda/: CMakeLists.txt
cgcuda/include/: CUDAArray.h  CUDAHelper.h
cgcuda/src/: CUDAHelper.cpp
cgvis/: CMakeLists.txt
cgvis/include/: Cell.h  Filter.h
